i7-1260p laptop external HDMI issue
Continuation of issue #6342 (closed) and related to #5531 (closed)
With drm-tip kernel as of 2022-12-19, suspend issues were fixed by this patch set: https://patchwork.freedesktop.org/series/110693/
However, HDMI issues were not addressed. Comment from the patch: "The one thing that doesn't work is HDMI port B that aliases with the second bogus eDP in the VBT, but fixing that mess is going to take a lot more work."
Following diff is a workaround:
diff --git a/drivers/gpu/drm/i915/display/intel_bios.c b/drivers/gpu/drm/i915/display/intel_bios.c
index 55544d484318..d6f257f8fd14 100644
--- a/drivers/gpu/drm/i915/display/intel_bios.c
+++ b/drivers/gpu/drm/i915/display/intel_bios.c
@@ -2708,7 +2708,7 @@ static void parse_ddi_port(struct intel_bios_encoder_data *devdata)
drm_dbg_kms(&i915->drm,
"More than one child device for port %c in VBT, using the first.\n",
port_name(port));
- return;
+ //return;
}
sanitize_device_type(devdata, port);