UBUNTU: SAUCE: drm/i915/quirks: Add multiple VBT quirk for HP ZBook Power G10

BugLink: https://bugs.launchpad.net/bugs/2025195

The quirk is to fix the bug[1] when you see this message[2]. The first
port is not the right port we want to use and it leads to the HDMI
monitor doesn't work.

According the bug report, skip the return workaround the issue, so I
created the DMI quirk to list affected platforms.

Intel is submitting patches[3][4] to fix the issue, but it requires to
backport huge drm structure changes, too. As there is no regression
found with this workaround, it's safer to use the DMI quirk to handle
this issue, and wait Intel's fix[3][4] to be available in v6.5 kernel.

1. https://gitlab.freedesktop.org/drm/intel/-/issues/7709
2. kernel: i915 0000:00:02.0: [drm:intel_bios_init [i915]] More than one child device for port B in VBT, using the first.
3. https://patchwork.freedesktop.org/series/117641/
4. https://patchwork.freedesktop.org/series/114200/

Signed-off-by: Chia-Lin Kao (AceLan) <acelan.kao@canonical.com>
Acked-by: Kai-Heng Feng <kai.heng.feng@canonical.com>
Signed-off-by: You-Sheng Yang <vicamo@gmail.com>