drivers/gpu/drm/i915/display/intel_display.c
@@ -8617,6 +8617,8 @@ int intel_modeset_init_noirq(struct drm_i915_private *i915)
 			return ret;
 	}
 
+	intel_init_quirks_early(i915);
+
 	intel_bios_init(i915);
 
 	ret = intel_vga_register(i915);
