drivers/gpu/drm/i915/display/intel_quirks.h
@@ -17,9 +17,11 @@ enum intel_quirk_id {
 	QUIRK_INVERT_BRIGHTNESS,
 	QUIRK_LVDS_SSC_DISABLE,
 	QUIRK_NO_PPS_BACKLIGHT_POWER_HOOK,
+	QUIRK_MULTIPLE_VBT_DEVICES,
 };
 
 void intel_init_quirks(struct drm_i915_private *i915);
+void intel_init_quirks_early(struct drm_i915_private *i915);
 bool intel_has_quirk(struct drm_i915_private *i915, enum intel_quirk_id quirk);
 
 #endif /* __INTEL_QUIRKS_H__ */
